Some fixes on ie9/ie8 on population characteristics: - On IE 9 most of it works - On IE 8 it doesn't work yet, but also gives no error. must investigate.

--- a/emif/population_characteristics/static/css/c3.css
+++ b/emif/population_characteristics/static/css/c3.css
@@ -148,3 +148,7 @@ text {
   stroke-width: 0;
   opacity: 0.2;
 }
+
+#pc_chart_place{
+  overflow:hidden;
+}
